deployment/kubernetes/kong/ingress.yaml
---
########
# Auth #
########
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-service-ingress
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/plugins: custom-authsvc-jwt
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /auth-service
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80
---
###########
# Booking #
###########
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booking-service-ingress
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/plugins: custom-authsvc-jwt
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /booking-service
        pathType: Prefix
        backend:
          service:
            name: booking-service
            port:
              number: 80
---
################
# Notification #
################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification-service-ingress
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/plugins: custom-authsvc-jwt
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /notification-service
        pathType: Prefix
        backend:
          service:
            name: notification-service
            port:
              number: 80
---
######
# AI #
######
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-service-ingress
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/plugins: custom-authsvc-jwt
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /ai-service
        pathType: Prefix
        backend:
          service:
            name: ai-service
            port:
              number: 80
---
##############
# Restaurant #
##############
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restaurant-service-ingress
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/plugins: custom-authsvc-jwt
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /restaurant-service
        pathType: Prefix
        backend:
          service:
            name: restaurant-service
            port:
              number: 80
---
